style(merlin-www-article): overflow video body to stop collpasing margins and set background to whit

--- a/packages/merlin-www-article/sass/glamour_redux/_body.scss
+++ b/packages/merlin-www-article/sass/glamour_redux/_body.scss
@@ -2,6 +2,9 @@
 
 .a-main--gallery {}
 .a-main--video {
+    background-color: $white;
+    overflow: hidden;
+
     .a-body__content {
         padding-left: 0;
     }
